[package]
authors = ["aarbuzov"]
name = "zmodem_no_std"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[dependencies]
core2 = { version = "0.4.0", default-features = false }
#clap = "2.21.1"
crc = { version = "1.4.0", default-features = false }
#env_logger = "0.4.2"
#hex = { version = "0.4.3", default-features = false }
#hexdump = "0.1.0"
#log = "0.3.7"

[dev-dependencies]
lazy_static = "1"
rand = "0.3.15"
