[package]
authors = ["aarbuzov"]
name = "zmodem"
categories = ["encoding", "no-std"]
description = "A Z-modem sender/receiver library"
keywords = ["zmodem", "z-modem", "serial", "transfer", "no-std"]
license = "MIT OR Apache-2.0"
version = "0.2.0"
resolver = "2"

[features]
default = ["std"]
std = ["dep:clap", "dep:env_logger", "dep:log"]

[dependencies]
core2 = { version = "0.4.0", default-features = false }
crc = { version = "1.4.0", default-features = false }
clap = { version = "2.21.1", optional = true }
env_logger = { version = "0.4.2", optional = true }
log = { version = "0.3.7", optional = true }

[dev-dependencies]
lazy_static = "1"
rand = "0.3.15"
